Updates. Fix hanging /bin/bash by changing HISTSIZE.