@@ -1,3 +1,2 @@
 export JAVA_HOME="/opt/java/home"
-export JVM_OPTS="-Xmx6g -XX:MaxPermSize=256M"
 export PATH="$JAVA_HOME/bin:$PATH"
